--- a/config-yml/webform.webform.contact.yml
+++ b/config-yml/webform.webform.contact.yml
@@ -32,13 +32,13 @@ elements: |-
       '#type': fieldset
       '#title': 'Personal Information'
       name:
-        '#title': 'Your Name'
         '#type': textfield
+        '#title': Name
         '#required': true
         '#default_value': '[current-user:display-name]'
       email:
-        '#title': 'Your Email'
         '#type': email
+        '#title': Email
         '#required': true
         '#default_value': '[current-user:mail]'
     details:
@@ -80,7 +80,7 @@ settings:
   form_open_message: ''
   form_close_message: ''
   form_exception_message: ''
-  form_previous_submissions: true
+  form_previous_submissions: false
   form_confidential: false
   form_confidential_message: ''
   form_disable_remote_addr: false
@@ -255,21 +255,21 @@ handlers:
     settings:
       states:
         - completed
-      to_mail: '[current-user:mail]'
+      to_mail: '[webform_submission:values:email:raw]'
       to_options: {  }
       bcc_mail: ''
       bcc_options: {  }
       cc_mail: ''
       cc_options: {  }
-      from_mail: _default
+      from_mail: '[site:mail]'
       from_options: {  }
       from_name: _default
-      reply_to: ''
+      reply_to: '[site:mail]'
       return_path: ''
       sender_mail: ''
       sender_name: ''
-      subject: '[webform_submission:values:subject:raw]'
-      body: '[webform_submission:values:message:value]'
+      subject: 'Thank you for your NBHNP submission'
+      body: "<p>We appreciate your interest in this project. Questions regarding access to non-digital holdings and reference questions should be directed to the holding institution.</p>\r\n\r\n<p><strong>Submitted values:</strong></p>\r\n[webform_submission:values]\r\n\r\n<div>&nbsp;</div>\r\n\r\n<p><img alt=\"UNB Libraries\" src=\"https://media.lib.unb.ca/core/img-2015/UNB_Lib_Black_Red.png\" /></p>"
       excluded_elements: {  }
       ignore_access: false
       exclude_empty: true
@@ -292,7 +292,7 @@ handlers:
     settings:
       states:
         - completed
-      to_mail: _default
+      to_mail: mic@unb.ca
       to_options: {  }
       bcc_mail: ''
       bcc_options: {  }
@@ -305,8 +305,8 @@ handlers:
       return_path: ''
       sender_mail: ''
       sender_name: ''
-      subject: '[webform_submission:values:subject:raw]'
-      body: '[webform_submission:values:message:value]'
+      subject: 'NBHNP Contact: [webform_submission:values:subject]'
+      body: "<p><strong>Submitted values are:</strong></p>\r\n[webform_submission:values]&nbsp;"
       excluded_elements: {  }
       ignore_access: false
       exclude_empty: true
