NBNP-379 Contact webform: Required Subject field (re: email handler)

--- a/config-yml/webform.webform.contact.yml
+++ b/config-yml/webform.webform.contact.yml
@@ -48,6 +48,7 @@ elements: |-
         '#title': Subject
         '#type': textfield
         '#test': 'Testing contact webform from [site:name]'
+        '#required': true
       message:
         '#title': Message
         '#type': textarea
