--- a/config-yml/webform.webform.contact.yml
+++ b/config-yml/webform.webform.contact.yml
@@ -270,7 +270,7 @@ handlers:
       return_path: ''
       sender_mail: ''
       sender_name: ''
-      subject: 'Thank you for your NBHNP submission'
+      subject: 'Thank you for your NB Historic Newspaper Project inquiry'
       body: "<p>We appreciate your interest in this project. Questions regarding access to non-digital holdings and reference questions should be directed to the holding institution.</p>\r\n\r\n<p><strong>Submitted values:</strong></p>\r\n[webform_submission:values]\r\n\r\n\r\n<p><img alt=\"UNB Libraries\" src=\"https://media.lib.unb.ca/core/img-2015/UNB_Lib_Black_Red.png\" /></p>"
       excluded_elements: {  }
       ignore_access: false
