NBNP-379 Contact webform: Update webform title

--- a/config-yml/webform.webform.contact.yml
+++ b/config-yml/webform.webform.contact.yml
@@ -19,7 +19,7 @@ uid: null
 template: false
 archive: false
 id: contact
-title: Contact
+title: 'Contact Us'
 description: 'Basic email contact webform.'
 category: ''
 elements: |-
