NBNP-379 Contact webform: add top alert

--- a/config-yml/webform.webform.contact.yml
+++ b/config-yml/webform.webform.contact.yml
@@ -23,6 +23,9 @@ title: 'Contact Us'
 description: 'Basic email contact webform.'
 category: ''
 elements: |-
+  info_box:
+    '#type': webform_markup
+    '#markup': '<div class="alert alert-info">We appreciate your interest in this project. Questions regarding access to non-digital holdings and reference questions should be directed to the holding institution.</div>'
   container:
     '#type': container
     '#attributes':
