NBNP-379 Contact webform: add subject field description text

--- a/config-yml/webform.webform.contact.yml
+++ b/config-yml/webform.webform.contact.yml
@@ -48,10 +48,11 @@ elements: |-
       '#type': fieldset
       '#title': Details
       subject:
-        '#title': Subject
         '#type': textfield
-        '#test': 'Testing contact webform from [site:name]'
+        '#title': Subject
+        '#description': 'Include newspaper title if relevant.'
         '#required': true
+        '#test': 'Testing contact webform from [site:name]'
       message:
         '#title': Message
         '#type': textarea
