Add redis as dependency of drupal service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
     container_name: newspapers.lib.unb.ca
     depends_on:
       - drupal-mysql-lib-unb-ca
+      - drupal-redis-lib-unb-ca
       - drupal-solr-lib-unb-ca
     expose:
       - "80"
