--- a/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
@@ -16,6 +16,8 @@ third_party_settings:
     commit_after_finalize: false
     multilingual:
       specific_languages: {  }
+      use_language_undefined_as_fallback_language: false
+      use_universal_collation: false
 id: pages_newspapers_lib_unb_ca
 name: pages.newspapers.lib.unb.ca
 description: ''
