--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -69,6 +69,8 @@ third_party_settings:
       limit_to_content_language: false
       include_language_independent: true
       specific_languages: {  }
+      use_language_undefined_as_fallback_language: false
+      use_universal_collation: false
 id: solr_newspapers_lib_unb_ca
 name: newspapers.lib.unb.ca
 description: ''
