NBNP-401 Enable FA button in Full HTML text format toolbar, Media group

--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -41,6 +41,7 @@ settings:
             - DrupalImage
             - Table
             - HorizontalRule
+            - DrupalFontAwesome
         -
           name: 'Block Formatting'
           items:
@@ -57,5 +58,5 @@ image_upload:
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
