NBNP-392 Add/configure file upload for Basic Page content

--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -29,6 +29,7 @@ module:
   digital_serial_title: 0
   dynamic_page_cache: 0
   editor: 0
+  editor_file: 0
   externalauth: 0
   facets: 0
   facets_range_widget: 0
