--- a/config-yml/google_analytics.settings.yml
+++ b/config-yml/google_analytics.settings.yml
@@ -1,7 +1,6 @@
 _core:
   default_config_hash: SMk3vOyh4KT6rXnqkDcNQ51YGpJzRV5hyig5SSIfU6U
-account: UA-93229850-7
-premium: false
+account: G-YRBP5J96S5
 domain_mode: 0
 cross_domains: ''
 visibility:
@@ -14,6 +13,7 @@ visibility:
 track:
   outbound: true
   mailto: true
+  tel: true
   files: true
   files_extensions: '7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip'
   colorbox: true
@@ -27,8 +27,7 @@ track:
 privacy:
   anonymizeip: true
 custom:
-  dimension: {  }
-  metric: {  }
+  parameters: {  }
 codesnippet:
   create: {  }
   before: ''
