--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -48,6 +48,7 @@ settings:
             - DrupalFile
             - Blockquote
             - DrupalImage
+            - DrupalMediaLibrary
             - Table
             - HorizontalRule
             - DrupalFontAwesome
