NBNP-405 Switch to key value re: notes display + append note value

--- a/config-yml/views.view.print_title_listing.yml
+++ b/config-yml/views.view.print_title_listing.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_frequency
+    - field.storage.node.field_frequency_notes
     - field.storage.node.field_marc_frequency
     - field.storage.node.field_place_of_publication
     - field.storage.node.field_sort_title
@@ -527,6 +528,69 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_frequency_notes:
+          id: field_frequency_notes
+          table: node__field_frequency_notes
+          field: field_frequency_notes
+          relationship: parent_title
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: 'Frequency Notes'
+          exclude: true
+          alter:
+            alter_text: true
+            text: '<br>{{ field_frequency_notes }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         field_marc_frequency:
           id: field_marc_frequency
           table: node__field_marc_frequency
@@ -538,8 +602,8 @@ display:
           label: Frequency
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ field_marc_frequency }}{{ field_frequency_notes }}'
             make_link: false
             path: ''
             absolute: false
@@ -577,7 +641,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: list_default
+          type: list_key
           settings: {  }
           group_column: value
           group_columns: {  }
@@ -804,6 +868,7 @@ display:
             field_place_of_publication_locality: field_place_of_publication_locality
             holding_retention: holding_retention
             field_frequency: field_frequency
+            field_frequency_notes: field_frequency_notes
             field_marc_frequency: field_marc_frequency
         holding_end_date:
           id: holding_end_date
@@ -1081,6 +1146,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_frequency'
+        - 'config:field.storage.node.field_frequency_notes'
         - 'config:field.storage.node.field_marc_frequency'
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
@@ -1103,6 +1169,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_frequency'
+        - 'config:field.storage.node.field_frequency_notes'
         - 'config:field.storage.node.field_marc_frequency'
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
