NBNP-409 Update meaningless version line in seadragon library

--- a/custom/modules/digital_serial/modules/digital_serial_page/digital_serial_page.libraries.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_page/digital_serial_page.libraries.yml
@@ -1,6 +1,6 @@
 openseadragon:
   remote: https://github.com/openseadragon/openseadragon
-  version: 2.2.1
+  version: latest
   license:
     name: BSD 3-clause
     URL: https://raw.githubusercontent.com/openseadragon/openseadragon/master/LICENSE.txt
