Update dev cronjob from central repository

--- a/.dockworker/deployment/k8s/dev/cronjob.yaml
+++ b/.dockworker/deployment/k8s/dev/cronjob.yaml
@@ -20,7 +20,7 @@ spec:
       template:
         spec:
           nodeSelector:
-            deployenv: dev
+            deploy_cron: 'true'
           containers:
             -
               name: cron-newspapers-lib-unb-ca
