Update dev deployment from central repository

--- a/.dockworker/deployment/k8s/dev/deployment.yaml
+++ b/.dockworker/deployment/k8s/dev/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         vcsRef: dev
     spec:
       nodeSelector:
-        deployenv: dev
+        deploy_dev: 'true'
       containers:
         -
           name: newspapers-lib-unb-ca
