--- a/.dockworker/deployment/k8s/prod/deployment.yaml
+++ b/.dockworker/deployment/k8s/prod/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         vcsRef: prod
     spec:
       nodeSelector:
-        deployenv: prod
+        deploy_prod: 'true'
       containers:
         -
           name: newspapers-lib-unb-ca
