--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -153,6 +153,59 @@ display:
           use_highlighting: false
           multi_type: separator
           multi_separator: ', '
+        institutions:
+          id: institutions
+          table: search_api_index_solr_newspapers_lib_unb_ca
+          field: institutions
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: search_api
+          label: 'Institutions (indexed field)'
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          link_to_item: false
+          use_highlighting: false
+          multi_type: separator
+          multi_separator: ', '
         field_sort_title:
           id: field_sort_title
           table: search_api_index_solr_newspapers_lib_unb_ca
@@ -759,6 +812,7 @@ display:
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
         - 'config:search_api.index.solr_newspapers_lib_unb_ca'
+        - 'search_api_list:solr_newspapers_lib_unb_ca'
   search_page:
     id: search_page
     display_title: 'Search Page'
@@ -788,3 +842,4 @@ display:
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
         - 'config:search_api.index.solr_newspapers_lib_unb_ca'
+        - 'search_api_list:solr_newspapers_lib_unb_ca'
