Add redis changes to local

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,9 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
   drupal-redis-lib-unb-ca:
-    image: redis:5-alpine
+    image: redis:7-alpine
     restart: unless-stopped
+    command: redis-server --maxmemory-policy allkeys-lru --maxmemory 128mb
     expose:
       - "6379"
     networks:
