--- a/config-yml/facets.facet.institutions.yml
+++ b/config-yml/facets.facet.institutions.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - search_api
 id: institutions
-name: Institutions
+name: 'Institutions (print/microform only)'
 weight: 0
 min_count: 1
 missing: false
