NBNP-397 Enable AJAX on earch view

--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -783,7 +783,7 @@ display:
           skip_access: false
       relationships: {  }
       css_class: search-results
-      use_ajax: false
+      use_ajax: true
       header:
         result:
           id: result
