--- a/config-yml/facets.facet.institutions.yml
+++ b/config-yml/facets.facet.institutions.yml
@@ -30,13 +30,13 @@ widget:
   type: checkbox
   config:
     show_numbers: true
-    soft_limit: 0
+    soft_limit: 10
     show_reset_link: false
     reset_text: 'Show all'
     hide_reset_when_no_selection: false
     soft_limit_settings:
-      show_less_label: 'Show less'
-      show_more_label: 'Show more'
+      show_less_label: 'Show Less'
+      show_more_label: 'Show All'
 empty_behavior:
   behavior: none
 only_visible_when_facet_source_is_visible: true
