NBNP-397 Update theme dependencies

--- a/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.libraries.yml
+++ b/custom/themes/newspapers_lib_unb_ca/newspapers_lib_unb_ca.libraries.yml
@@ -8,6 +8,5 @@ ajax_loading:
     dist/js/newspapers_core.ajax_loading.js: {}
   dependencies:
     - core/jquery
-    - core/jquery.once
     - core/drupal
-    - core/drupalSettings
+    - core/once
