--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -2,6 +2,7 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   address: 0
+  ajax_loader: 0
   alert_scheduler_client: 0
   allowed_formats: 0
   antibot: 0
