NBNP-397 Disable ajax for digital page lister display

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1957,7 +1957,7 @@ display:
         header: false
       relationships: {  }
       css_class: 'browse-issues image-link-shadow'
-      use_ajax: true
+      use_ajax: false
       display_description: ''
       header: {  }
       exposed_block: false
