--- a/config-yml/facets.facet.holdings.yml
+++ b/config-yml/facets.facet.holdings.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - search_api
 id: holdings
-name: Holdings
+name: 'Holdings Type'
 weight: 0
 min_count: 1
 missing: false
