BugzID: 19553 Enable module for Views filter/paging history+AJAX support

--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -91,6 +91,7 @@ module:
   update: 0
   user: 0
   view_unpublished: 0
+  views_ajax_history: 0
   views_data_export: 0
   views_infinite_scroll: 0
   views_ui: 0
