--- a/config-yml/views.settings.yml
+++ b/config-yml/views.settings.yml
@@ -1,7 +1,7 @@
 _core:
   default_config_hash: RaRd9EIcwA4u3qCSRLL8EnCicbda1kV__ASmVbyehvQ
 display_extenders:
-  - ajax_history
+  ajax_history: ajax_history
 skip_cache: false
 sql_signature: false
 ui:
