--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1382,7 +1382,7 @@ display:
             alter_text: false
             text: ''
             make_link: true
-            path: '/serials/{{ parent_digital_title_id }}/issues/{{ parent_digital_issue_id }}'
+            path: '/serials/{{ parent_digital_title_id }}/issues/{{ parent_digital_issue_id }}/pages/{{ parent_digital_page_id }}'
             absolute: false
             external: false
             replace_spaces: false
@@ -1422,6 +1422,8 @@ display:
           settings:
             image_link: ''
             image_style: browse_archives
+            image_loading:
+              attribute: lazy
           group_column: ''
           group_columns: {  }
           group_rows: true
