--- a/config-yml/search_api_solr.solr_field_type.text_edgestring_und_6_0_0.yml
+++ b/config-yml/search_api_solr.solr_field_type.text_edgestring_und_6_0_0.yml
@@ -14,6 +14,7 @@ field_type:
   name: text_edgenstring
   class: solr.TextField
   positionIncrementGap: 100
+  storeOffsetsWithPositions: true
   analyzers:
     -
       type: index
