--- a/config-yml/search_api_solr.solr_request_handler.request_handler_suggest_default_7_0_0.yml
+++ b/config-yml/search_api_solr.solr_request_handler.request_handler_suggest_default_7_0_0.yml
@@ -24,7 +24,7 @@ request_handler:
           name: suggest.dictionary
           VALUE: und
         -
-          name: suggest.dictionary
+          name: suggest.count
           VALUE: '10'
   arr:
     -
