--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -48,15 +48,15 @@ dependencies:
     - field.field.node.publication.field_supplemental_information
     - field.field.node.publication.field_this_is_part_of_a_family
     - field.field.node.publication.field_title_notes
-    - image.style.sample_publication_image
+    - image.style.sample_publication_image_lg
     - node.type.publication
   module:
     - address
+    - colorbox
     - datetime
     - datetime_range
     - field_group
     - file
-    - image
     - options
     - text
     - user
@@ -286,13 +286,16 @@ content:
     weight: 4
     region: content
   field_sample_image:
-    type: image
+    type: colorbox
     label: hidden
     settings:
-      image_link: file
-      image_style: sample_publication_image
-      image_loading:
-        attribute: lazy
+      colorbox_node_style: sample_publication_image_lg
+      colorbox_node_style_first: ''
+      colorbox_image_style: ''
+      colorbox_gallery: post
+      colorbox_gallery_custom: ''
+      colorbox_caption: none
+      colorbox_caption_custom: ''
     third_party_settings: {  }
     weight: 28
     region: content
