--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1963,7 +1963,10 @@ display:
       display_description: ''
       header: {  }
       exposed_block: false
-      display_extenders: {  }
+      display_extenders:
+        ajax_history: {  }
+        simple_sitemap_display_extender:
+          variants: {  }
       path: serials/browse/%
     cache_metadata:
       max-age: -1
