--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1832,7 +1832,7 @@ display:
             title_enable: false
             title: All
           title_enable: true
-          title: '{{ parent_publication_title }}'
+          title: '{{ parent_publication_title }} - Digital Issues'
           default_argument_type: fixed
           default_argument_options:
             argument: ''
