IN-311 Add simple sitemap, add default configuration

--- a/config-yml/views.settings.yml
+++ b/config-yml/views.settings.yml
@@ -2,6 +2,7 @@ _core:
   default_config_hash: RaRd9EIcwA4u3qCSRLL8EnCicbda1kV__ASmVbyehvQ
 display_extenders:
   ajax_history: ajax_history
+  simple_sitemap_display_extender: simple_sitemap_display_extender
 skip_cache: false
 sql_signature: false
 ui:
