--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -83,6 +83,8 @@ module:
   serial_holding_export: 0
   serialization: 0
   serials: 0
+  simple_sitemap: 0
+  simple_sitemap_views: 0
   system: 0
   taxonomy: 0
   text: 0
