BugzID: 19891 Add Chinese, Traditional to list of allowed languages

--- a/config-yml/field.storage.node.field_language.yml
+++ b/config-yml/field.storage.node.field_language.yml
@@ -21,6 +21,7 @@ settings:
     authors_default: 0
   included_languages:
     zh-hans: zh-hans
+    zh-hant: zh-hant
     en: en
     fr: fr
     micmac: micmac
